--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"lottie-react": "^2.3.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router": "^6.6.0",
 		"react-router-dom": "^6.6.0"
 	},
 	"devDependencies": {
-		"@hint/configuration-web-recommended": "^8.2.16",
 		"@vitejs/plugin-react": "^1.0.7",
 		"autoprefixer": "^10.4.13",
-		"hint": "^7.1.3",
 		"postcss": "^8.4.20",
 		"tailwindcss": "^3.2.4",
 		"vite": "^2.7.2"
